RESOLVED FIXED312695
Preload scanner should not skip <source> with empty type attribute in <picture>
https://bugs.webkit.org/show_bug.cgi?id=312695
Summary Preload scanner should not skip <source> with empty type attribute in <picture>
Ahmad Saleem
Reported 2026-04-18 17:31:42 PDT
ssia - it was bug in preload scanner - which I came across while investigating some other bug (which don't exist), so we should just update test for it.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-18 17:31:51 PDT
Ahmad Saleem
Comment 2 2026-04-18 17:33:16 PDT
EWS
Comment 3 2026-04-20 01:59:40 PDT
Committed 311568@main (8d8bd7b53323): <https://commits.webkit.org/311568@main> Reviewed commits have been landed. Closing PR #63048 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.